--- a/src/run1_en_fr.yaml
+++ b/src/run1_en_fr.yaml
@@ -12,15 +12,20 @@ data:
     path_src: ../data/clean/Europarl/Europarl_train_100k.tok.true.clean.en
     path_tgt: ../data/clean/Europarl/Europarl_train_100k.tok.true.clean.fr
   valid:
-    path_src: ../data/raw/Europarl/Europarl_dev_3750.en
-    path_tgt: ../data/raw/Europarl/Europarl_dev_3750.fr
-
-# Train on a single GPU
-world_size: 1
-gpu_ranks: [0]
+    path_src: ../data/clean/Europarl/Europarl_dev_3750.tok.true.clean.en
+    path_tgt: ../data/clean/Europarl/Europarl_dev_3750.tok.true.clean.fr
 
 # Where to save the checkpoints
 save_model: ../data/model/run1
 save_checkpoint_steps: 5000
 train_steps: 10000
-valid_steps: 5000
+valid_steps: 8000
+report_every: 100
+
+learning_rate: 1.0
+
+
+# Train on a single GPU
+world_size: 1
+gpu_ranks: [0]
+
