--- a/src/run2_en_fr.yaml
+++ b/src/run2_en_fr.yaml
@@ -9,21 +9,26 @@ overwrite: False
 # Corpus opts:
 data:
     corpus_1:
-        path_src: ../data/clean/Europarl/lemma/Europarl_train_100k.tok.true.clean.lemma.en
-        path_tgt: ../data/clean/Europarl/lemma/Europarl_train_100k.tok.true.clean.lemma.fr
+        path_src: ../data/clean/Europarl/Europarl_train_100k.tok.true.clean.en
+        path_tgt: ../data/clean/Europarl/Europarl_train_100k.tok.true.clean.fr
     corpus_2:
-        path_src: ../data/clean/Emea/lemma/Emea_train_10k.tok.true.clean.lemma.en
-        path_tgt: ../data/clean/Emea/lemma/Emea_train_10k.tok.true.clean.lemma.fr
+        path_src: ../data/clean/Emea/Emea_train_10k.tok.true.clean.en
+        path_tgt: ../data/clean/Emea/Emea_train_10k.tok.true.clean.fr
     valid:
-        path_src: ../data/raw/Europarl/Europarl_dev_3750.en
-        path_tgt: ../data/raw/Europarl/Europarl_dev_3750.fr
+        path_src: ../data/clean/Europarl/Europarl_dev_3750.tok.true.clean.en
+        path_tgt: ../data/clean/Europarl/Europarl_dev_3750.tok.true.clean.fr
+
+
+# Where to save the checkpoints
+save_model: ../data/model/run2
+save_checkpoint_steps: 5000
+train_steps: 10000
+valid_steps: 8000
+report_every: 100
+
+learning_rate: 1.0
+
 
 # Train on a single GPU
 world_size: 1
 gpu_ranks: [0]
-
-# Where to save the checkpoints
-save_model: ../data/model/run2
-save_checkpoint_steps: 500
-train_steps: 1000
-valid_steps: 500
